log/build_2024-05-18_13-39-01/doozy_forklift/stderr.log
  File "/home/avinaash/ForkLift_AMR/install/doozy_forklift/lib/python3.8/site-packages/doozy_forklift/dock_with_pallet_09.py", line 1
    Here's the complete code with improvements for constructing the behavior tree, ensuring it is ticked, and adding comprehensive logging to trace the flow of execution and verify flag values.
                                                                                                                                                                                                ^
SyntaxError: EOL while scanning string literal

